# rusty-givens

./: .gitignore  .gitignore-pro  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  mkdocs.yml
_archive/src_old/: ac_model.rs  io.rs  jacobian.rs  lib.rs  main.rs  measurement.rs  power_system.rs  solver.rs
case_study/: CONVERSION_EXPLANATION.md  bus_results.csv  compare_se.py  compare_solver_formulations.py  comparison_report.txt  comparison_results.json  export_network_params.py  extract_gb_network.py  gb_network.json  results_rust.json  run_julia_se.jl  solver_formulations_report.txt
case_study/ehv_network/: README.md  boundary_injections.csv  extract_ehv_network.py  gb_ehv_network.json
case_study/network_params/: README.md  bus.csv  ext_grid.csv  gen.csv  line.csv  load.csv  shunt.csv  trafo.csv  voltage_levels.csv
crates/gb-case-study/: Cargo.toml
crates/gb-case-study/src/: main.rs
crates/rusty-givens-core/: Cargo.toml
crates/rusty-givens-core/src/: lib.rs
crates/rusty-givens-core/src/kernel/: dc_estimation.rs  equality_constrained.rs  factorize.rs  fast_decoupled.rs  gain.rs  gauss_newton.rs  global_status.rs  jacobian.rs  mod.rs  peters_wilkinson.rs  post_estimation.rs  qr_givens.rs  types.rs  zero_injection.rs
crates/rusty-givens-core/src/model/: ac_model.rs  measurement.rs  mod.rs  network.rs
crates/rusty-givens-io/: Cargo.toml
crates/rusty-givens-io/src/: json.rs
docs/: README.md  api.md  architecture.md  case-study.md  index.md  legacy_index.html.bak  pro.md  quickstart.md  references.md  requirements.txt
docs/stylesheets/: custom.css
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/app/components/config-panel/: config-panel.component.html  config-panel.component.scss  config-panel.component.ts
frontend/src/app/components/grid-view/: grid-view.component.html  grid-view.component.scss  grid-view.component.ts
frontend/src/app/components/redundancy-panel/: redundancy-panel.component.html  redundancy-panel.component.scss  redundancy-panel.component.ts
frontend/src/app/components/results-table/: results-table.component.html  results-table.component.scss  results-table.component.ts
frontend/src/app/components/summary-card/: summary-card.component.html  summary-card.component.scss  summary-card.component.ts
frontend/src/app/models/: network.model.ts
frontend/src/app/services/: api.service.ts
frontend/src/environments/: environment.ts
proto/rusty_givens/v1/: service.proto
services/estimate-service/: Cargo.toml  build.rs
services/estimate-service/src/: grpc.rs  main.rs
