[package]
name = "rusty-givens-io"
version = "0.1.0"
edition = "2021"
description = "I/O adapters for rusty-givens — JSON loading, format conversion"
license = "Apache-2.0"

[dependencies]
rusty-givens-core = { path = "../rusty-givens-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
